feat: add universal selector

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     src: url("./assets/fonts/Poppins-Light.ttf");
 }
 
+* {
+    box-sizing: border-box; /* borders and padding sizes will be taken into account in values that reveal restrictions in the width and height of the element. This transforms the work with dimensions, which allows them to be more logical*/
+}
+
 body{
     font-family: 'Poppins';
 }
