--- a/style.css
+++ b/style.css
@@ -7,18 +7,28 @@
     box-sizing: border-box; /* borders and padding sizes will be taken into account in values that reveal restrictions in the width and height of the element. This transforms the work with dimensions, which allows them to be more logical*/
 }
 
+@media (max-width: 768px) {
+    .section, .header, .profile, .footer{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
 html {
     scroll-behavior: smooth;
 }
 
 body{
     font-family: 'Poppins';
+    font-size: 18px;
     min-height: 100vh; /*min height of the body can't be less than the height page*/
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column; /* redef direction of main axis*/
     justify-content: space-between; /*align elems along main axis, all elem's are delayed at max distance from each other, extreme ones are pressed to the borders of the parent.*/
+    background-color: #d7e7b6;
 }
 
 .container{
@@ -26,9 +36,12 @@ body{
     margin: 0 auto;
 }
 
+.title {
+    color: rgb(130, 153, 133);
+}
+
 /* HEADER */
 .header {
-    border: 1px solid red;
     background-color: rgb(130, 153, 133);
 }
 
@@ -54,44 +67,98 @@ body{
 }
 /* MAIN */
 .main {
-    border: 1px solid red;
+
+}
+
+.main__container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.section {
+    width: calc(50% - 15px);
+    margin: 5px;
+    padding: 10px;
+    padding-bottom: 35px;
 }
 
 .profile {
-    border-bottom: 10px solid rgb(130, 153, 133);
+    border-bottom: 10px solid rgb(255, 219, 31);
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
 }
-.profile__line {
+
+.profile__img {
+    transition: transform 0.3s ease-in;
+}
+
+.profile__img:hover {
+    transform: scale(0.95);
+}
+
+.profile__title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.h1 {
     border-bottom: 3px solid rgb(255, 219, 31);
-    width: 100px;
+    font-size: 32px;
+    letter-spacing: 11px;
+    padding-bottom: 20px;
+    transition: transform 0.3s ease-in;
+
+}
+
+.h1:hover {
+    transform: scale(0.95);
+}
+
+.profile__description {
+    letter-spacing: 5px;
 }
 
 .contacts {
-    border-bottom: 3px solid rgb(130, 153, 133);
+    border-bottom: 3px solid rgb(255, 219, 31);
 }
 
 .summary {
-    border-bottom: 3px solid rgb(130, 153, 133);
+    border-bottom: 3px solid rgb(255, 219, 31);
+}
+
+.summary__description {
+    text-align: justify;
 }
 
 .skills{
-    border-bottom: 3px solid rgb(130, 153, 133);
+    border-bottom: 3px solid rgb(255, 219, 31);
 }
 
 .code{
-    border-bottom: 3px solid rgb(130, 153, 133);
+    border-bottom: 3px solid rgb(255, 219, 31);
+
+}
+
+.code__pre{
+    margin: 0;
+    padding: 0;
 }
 
 .courses{
-    border-bottom: 3px solid rgb(130, 153, 133);
+    border-bottom: 3px solid rgb(255, 219, 31);
 }
 
 .projects{
-    border-bottom: 3px solid rgb(130, 153, 133);
+    border-bottom: 3px solid rgb(255, 219, 31);
 }
 
 /* FOOTER */
 .footer {
-    border: 1px solid red;
+
     background-color: rgb(130, 153, 133);
 }
 
